<resources>
    <string name="select_coutroy">选择国家/地区</string>
    <string name="app_name">凯迪仕智能</string>
    <string name="app_name_notificatoin_title">凯迪仕智能正在运行</string>
    <string name="app_name_notificatoin_content">凯迪仕智能服务已开启，有消息会及时通知您</string>
    <string name="china">中国大陆</string>
    <string name="input_telephone_or_rmail">请输入手机号或邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password_symbol">忘记密码?</string>
    <string name="login">登录</string>
    <string name="have_you_account_symbol">您还没有账号？</string>
    <string name="register_now">立即注册</string>
    <string name="register">注册</string>
    <string name="get_verification">获取验证码</string>
    <string name="input_verification">请输入验证码</string>
    <string name="register_default_agree">注册默认同意</string>
    <string name="agree">同意</string>
    <string name="no_agree">不同意</string>
    <string name="user_protocol">用户协议</string>
    <string name="user_protocol2">《用户协议》</string>
    <string name="forget_password">忘记密码</string>
    <string name="have_add_lock">门锁已添加成功</string>
    <string name="have_add_lock_text">快来设置智能开关吧!</string>
    <string name="complete">完成</string>
    <string name="right_now_set">立即设置</string>
    <string name="sure_to_perform">确定执行</string>
    <string name="search">搜索</string>
    <string name="input_lock_product">请输入您的门锁型号</string>
    <string name="input_clothes_product">请输入您的晾衣机型号</string>
    <string name="look_for_QRCode">在门锁后面板找到配网二维码</string>
    <string name="not_input_special_symbol">不能输入特殊符号</string>
    <string name="phone_not_right">手机号错误</string>
    <string name="hint">提示</string>
    <string name="statements_and_terms">声明与条款</string>
    <string name="statements_and_terms_content">欢迎使用凯迪仕APP，为了向您提供优\n质的服务，我们将严格遵守相关法律法\n规和隐私政策以保护您的个人信息。在\n您使用凯迪仕前，请仔细阅读并充分理\n解《隐私政策》和《用户协议》，当您\n点击【同意】即表示您同意并接受\n《隐私政策》和《用户协议》的全部内\n容。如您有任何问题，请联系我们。请\n您认真阅读</string>
    <string name="terms_of_use">《使用条款》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="and">和</string>
    <string name="password_error">密码错误</string>
    <string name="affirm">确认</string>
    <string name="noNet">无网络,请先连接网络!</string>
    <string name="more_then_ten_member">您已添加超过10个成员，\n请删除已有成员权限，再添加</string>
    <string name="dialog_confirm">确认</string>
    <string name="safe_mode_dialog">请去新增开锁方式，启动安全模式</string>
    <string name="cancel">取消</string>
    <string name="query">确认</string>
    <string name="get_verification_content">重新获取(%1$s)</string>
    <string name="verification_verify_error">请输入六位验证码</string>
    <string name="password_judgment">必须同时存在字母和数字,并且在6-12位</string>
    <string name="agree_user_protocol">请同意用户协议</string>
    <string name="input_valid_telephone_or_email">请输入有效手机号或邮箱</string>
    <string name="account_or_password_error">账户或密码错误</string>
    <string name="account_message_not_empty">账户信息不能为空</string>
    <string name="home_page">首页</string>
    <string name="device">设备</string>
    <string name="mine">我的</string>
    <string name="guard_your_home">守护您的家</string>
    <string name="click_add_device">点击添加设备</string>
    <string name="my_message">我的消息</string>
    <string name="production_activation">产品激活</string>
    <string name="security_setting">安全设置</string>
    <string name="user_feedback">用户反馈</string>
    <string name="chang_jian_question">常见问题</string>
    <string name="my_setting">我的设置</string>
    <string name="about_us">关于我们</string>
    <string name="strong_strong_guardian">壮壮家的守护者</string>
    <string name="no_message">暂无消息</string>
    <string name="official">官方</string>
    <string name="delete">删除</string>
    <string name="message_detail">消息详情</string>
    <string name="not_bind">验证码无效</string>
    <string name="has_bind">设备已绑定</string>
    <string name="register_account_fail">注册账户失败</string>
    <string name="modify_password_fail">修改密码失败</string>
    <string name="character_length_chao_guo_limit">字符长度超出限制</string>
    <string name="liu_yan_fail">留言失败</string>
    <string name="request_data_format_incorrect">请求数据或格式不对</string>
    <string name="data_parameter_incorrect">数据参数不对</string>
    <string name="device_not_found">资源未找到</string>
    <string name="user_repeat_register">用户重复注册</string>
    <string name="not_show_verification">不需要显示验证码</string>
    <string name="mqtt_server_connect_fail">mqtt server connect fail</string>
    <string name="virification_error">查无该用户</string>
    <string name="device_repeat_register">设备重复注册</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="fu_quan_user_not_find">要赋权用户没找到！</string>
    <string name="device_register_fail_repeat_record">设备已被绑定，请解绑后再添加</string>
    <string name="do_not_register_user_memenet">don\'t register user ,memenet</string>
    <string name="not_peremeter_peremeter_not_match">无法查找设备</string>
    <string name="upload_pushid_fail">上传pushid失败</string>
    <string name="not_manager">您不是设备管理员，无权限分享</string>
    <string name="password_only_number_and_letter_6_15">密码只能数字和字母组合，6-15位</string>
    <string name="data_not_map">数据不是映射关系</string>
    <string name="invalid_random_code">验证码无效</string>
    <string name="too_many_request">操作频繁，稍后再试</string>
    <string name="server_error">服务器出小差</string>
    <string name="ye_wu_process_fail">业务处理失败</string>
    <string name="server_process_timeout">服务请求处理超时</string>
    <string name="api_interface_update_fail">api接口更新失败</string>
    <string name="pi_liang_register_user_fail">批量注册用户失败</string>
    <string name="sn_password_mac_map_incorrect">SN和password1与mac映射不对</string>
    <string name="get_nickname_fail">获取昵称失败</string>
    <string name="modify_push_switch_fail">修改推送开关失败</string>
    <string name="upload_file_fail">上传文件失败</string>
    <string name="verification_send_too_many">验证码发送次数过多，稍后再试</string>
    <string name="register_memenet_fail">register memenet fail</string>
    <string name="logout_fail">退出失败 </string>
    <string name="add_device_fail">添加设备失败</string>
    <string name="operation_fail">操作失败</string>
    <string name="open_lock_fail">开锁失败！</string>
    <string name="e_yi_login">恶意登录</string>
    <string name="information_verification_fail">信息校验失败</string>
    <string name="open_lock_fail_not_permission">开锁失败,当前时间没有权限</string>
    <string name="illegal_data">非法数据</string>
    <string name="has_nodification_manager_confirm">已经通知管理员确认</string>
    <string name="has_bind_gateway">已经绑定了网关</string>
    <string name="approval_fail">审批失败</string>
    <string name="get_list_fail">获取列表失败</string>
    <string name="get_gateway_device_list_fail">获取网关设备列表失败</string>
    <string name="get_open_lock_record_fail">获取操作记录失败</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="not_gateway_manager">不是网关管理员</string>
    <string name="bind_gateway_fail">绑定网关失败</string>
    <string name="mimi_bind_gateway_fail">mimi绑定网关失败</string>
    <string name="approval_mimi_bind_gateway_fail">审批mimi绑定网关失败</string>
    <string name="production_fail">生产失败</string>
    <string name="resource_not_find">资源未找到</string>
    <string name="image_size_too_large">图片质量过大，无法上传</string>
    <string name="nickname_modify_success">昵称修改成功</string>
    <string name="account_or_password_empty">账号或密码为空</string>
    <string name="modify_nickname_fail">修改昵称失败</string>
    <string name="user_exit">用户已经存在</string>
    <string name="user_not_registered">该用户未注册</string>
    <string name="kaadas_code_security_key_full">当前胁迫密钥已满5组，请关闭其他胁迫密钥后，再添加</string>
    <string name="server_back_exception">服务器返回异常</string>
    <string name="tiem_out">超时</string>
    <string name="connect_exception">连接异常</string>
    <string name="unable_identify_host">无法识别主机</string>
    <string name="http_exception">http异常</string>
    <string name="exception">异常消息</string>
    <string name="phone_number_con_not_empty">手机号不能为空</string>
    <string name="find_newAPP">发现新版本，是否更新？</string>
    <string name="token_out_date">登录过期</string>
    <string name="register_success">注册成功</string>
    <string name="pwd_resetting_success">密码重置成功</string>
    <string name="my_device">我的设备</string>
    <string name="you_no_device">您还没有设备哦</string>
    <string name="lockNickName">Kaadas 智能锁</string>
    <string name="device_power">电量</string>
    <string name="add_device">添加设备</string>
    <string name="device_zigbee">ZigBee</string>
    <string name="gateway_light_setting">指示灯处于其它状态？</string>
    <string name="add_gateway">添加网关</string>
    <string name="add_next">下一步</string>
    <string name="clothes_hanger_add_next">重新连接</string>
    <string name="clothes_hanger_add_reconnect">取消连接</string>
    <string name="clothes_hanger_add_success">配网成功，您可以体验产品了~</string>
    <string name="gateway_light_confirm">网线连接路由器LAN和网关WAN,\n接通电源,确认指示灯常亮</string>
    <string name="confirm_gateway_light_already">确认配网指示灯常亮</string>
    <string name="reset_key_two">（如指示灯处于其他状态，按复位键）</string>
    <string name="confirm_indicator_light">确认指示灯变亮</string>
    <string name="go_bind">去绑定</string>
    <string name="wifi_is_connecting">正在连接kaadas网关Wi-Fi中...</string>
    <string name="add_lock">添加门锁</string>
    <string name="choose_to_add_wifi">选择配网</string>
    <string name="searching_bluetooth">正在搜索附近设备...</string>
    <string name="research">重新搜索</string>
    <string name="help">帮助</string>
    <string name="help_title">您无法发现您的蓝牙设备，请按照以下步骤对设备进行检查：</string>
    <string name="help_gateway_bottom">如果您已经完成以上操作，仍然无法成功添加设备，可以在“我的-用户反馈”向我们的工作人员进行反馈。</string>
    <string name="help_bottom">如果您已经完成以上操作，仍然无法成功添加设备，可以在“我的-用户反馈”向我们的工作人员进行反馈。</string>
    <string name="help_cateye_bottom">如果您已经完成以上操作，仍然无法成功添加设备，可以在“我的-用户反馈”向我们的工作人员进行反馈。</string>
    <string name="help_one">请保证您的设备已经接通电源，或电池电量充足。</string>
    <string name="help_two">请打开您的手机蓝牙。（由于系统原因，安卓手机需要同时开启定位权限）</string>
    <string name="help_three">保持待添加的设备与手机的距离不超过5米，从而保证设备间的通信。</string>
    <string name="help_four">您需要确保您的设备处于待添加的状态下具体方法如下：</string>
    <string name="help_four_one">对于没有任何按键的设备，您可以尝试以 1 秒为间隙，反复对设备进行上电操作。</string>
    <string name="bluetooth_first_text">确保门锁已安装好，并装上电池</string>
    <string name="bluetooth_user_pwd">初始用户管理密码：12345678</string>
    <string name="no_usable_gateway">无可用ZigBee网关</string>
    <string name="add_zigbee_device_first_pair_gateway">添加ZigBee设备\n需要先配置网关，前去配置</string>
    <string name="cycle_rules_loop">周重复</string>
    <string name="cycle_rules_everyday">每天</string>
    <string name="cycle_rules_1">每周一</string>
    <string name="cycle_rules_2">每周二</string>
    <string name="cycle_rules_3">每周三</string>
    <string name="cycle_rules_4">每周四</string>
    <string name="cycle_rules_5">每周五</string>
    <string name="cycle_rules_6">每周六</string>
    <string name="cycle_rules_7">每周日</string>
    <string name="update_wifi_name">更改Wi-Fi名称</string>
    <string name="update_wifi_name_need_rebind_cateye">更改网关Wi-Fi名称后，需重新绑定猫眼</string>
    <string name="please_input_wifi_name">请输入新的Wi-Fi名称</string>
    <string name="account_logout_continue">继续注销</string>
    <string name="account_logout_condition">为保证您的账号安全，在您提交的注销申请生效前，需同时满足以下条件：</string>
    <string name="account_logout_condition_1">1. 账号处于安全状态</string>
    <string name="account_logout_condition_1_1">账号处于正常使用状态，无被盗风险</string>
    <string name="account_logout_condition_2">2. 账号关联设备已删除</string>
    <string name="account_logout_condition_2_1">本账号没有绑定设备，没有存在争议的服务</string>
    <string name="account_logout_condition_3">3. 账号权限解除</string>
    <string name="account_logout_condition_3_1">账号已解除与其他产品的授权登录及绑定关系</string>
    <string name="account_logout_condition_4">4. 账号无任何纠纷，包括投诉举报</string>
    <string name="face_recognition_switch_title_open">门锁如何开启人脸识别</string>
    <string name="face_recognition_switch_title_close">门锁如何关闭人脸识别</string>
    <string name="face_recognition_switch_hint_open">① 按键区输入【*】两次\n② 输入已修改的管理员密码【********】，并按【#】确认\n③ 语音播报：“已进入管理模式”\n④ 根据语音提示：按【2】进入系统设置，再按【3】开启人脸识别功能，即可开启人脸识别功能</string>
    <string name="face_recognition_switch_hint_close">① 按键区输入【*】两次\n② 输入已修改的管理员密码【********】，并按【#】确认\n③ 语音播报：“已进入管理模式”\n④ 根据语音提示：按【2】进入系统设置，再按【3】关闭人脸识别功能，即可关闭人脸识别功能</string>
</resources>