<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <include layout="@layout/head"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/user_cycle_everyday"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_everyday" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/user_cycle_7"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_7" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />

        <CheckBox
            android:id="@+id/user_cycle_1"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />


        <CheckBox
            android:id="@+id/user_cycle_2"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />

        <CheckBox
            android:id="@+id/user_cycle_3"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />

        <CheckBox
            android:id="@+id/user_cycle_4"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />

        <CheckBox
            android:id="@+id/user_cycle_5"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#EAE9E9" />

        <CheckBox
            android:id="@+id/user_cycle_6"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_6" />


    </LinearLayout>


</LinearLayout>
