<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:src="@mipmap/iv_back" />

        <TextView
            android:id="@+id/pwd_header_add_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cycle_rules_loop"
            android:textColor="#2B2F50"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/user_cycle_everyday"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_everyday" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/user_cycle_7"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_7" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />

        <CheckBox
            android:id="@+id/user_cycle_1"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />


        <CheckBox
            android:id="@+id/user_cycle_2"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />

        <CheckBox
            android:id="@+id/user_cycle_3"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />

        <CheckBox
            android:id="@+id/user_cycle_4"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />

        <CheckBox
            android:id="@+id/user_cycle_5"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1666" />

        <CheckBox
            android:id="@+id/user_cycle_6"
            style="@style/BottomTabStyle2"
            android:drawableRight="@drawable/btn_tab_home_selector2"
            android:text="@string/cycle_rules_6" />


    </LinearLayout>


</LinearLayout>
