<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gateway_dialog_bj"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/dialog_color"
        android:text="@string/update_wifi_name"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="#ff999999"
        android:textSize="@dimen/sp_12"
        android:text="@string/update_wifi_name_need_rebind_cateye"
        android:lineSpacingExtra="@dimen/dp_10"
        />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_18"
        android:hint="@string/please_input_wifi_name"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:background="#FFF"
        android:textSize="@dimen/sp_12"
        android:paddingLeft="@dimen/dp_6"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/dialog_line"
        android:layout_marginTop="@dimen/dp_10"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        >
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_15"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="#333333"
            />
        <TextView
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/dialog_line"
            />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_15"
            android:textColor="#1F96F7"
            android:text="@string/query"
            android:gravity="center"
            />

    </LinearLayout>
</LinearLayout>