<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bj"
    >
    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/dialog_color"
        android:text="@string/hint"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_15"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_14"
        android:textColor="@color/dialog_color"
        android:textSize="@dimen/sp_16"
        android:text="@string/safe_mode_dialog"
        android:lineSpacingExtra="@dimen/dp_20"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/dialog_line"
        android:layout_marginTop="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36"
        >
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_13"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/dialog_color"
            />
        <TextView
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/dialog_line"
            />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_13"
            android:textColor="#1F96F7"
            android:text="@string/query"
            android:gravity="center"
            />

    </LinearLayout>
</LinearLayout>